--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,14 +41,7 @@ jobs:
         with:
           name: ${{ env.BINARY_NAME }}-binaries
           path: build/
-      - name: Uploaded binaries as release assets
-        run: |
-          set -x
-          tag_name="${GITHUB_REF##*/}"
-          assets=()
-          for binary in ./build/*; do
-            assets+=("-a" "${binary}")
-          done
-          hub release edit "${assets[@]}" -m "$tag_name" "$tag_name"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: "build/*"
